--- a/前端需求.md
+++ b/前端需求.md
@@ -1,26 +1,30 @@
-# 兴趣圈
+# 兴趣圈基本功能
 
 ## 显示多个兴趣圈
 1. 兴趣圈名称
 2. 圈子所拥有人数
-3. 所拥有文章数
-4. 热度
-5. 地区
-6. 加入按钮
-7. 每个圈子的封面
+3. 圈子内成员活跃度
+   1. 通过成员的经验值表现
+      1. 浏览帖子+1经验
+      2. 发表评论+5经验
+      3. 发表帖子+10经验
+4. 加入圈子按钮
+5. 每个圈子的头像
 
 ## 查看兴趣圈中帖子
-1. 切换自己加入的兴趣圈和热门兴趣圈中帖子
-2. 点赞,评论,
+1. 在探索中可以查看所有帖子的封面和标题
+2. 点击封面进入帖子的浏览
+3. 可以对帖子进行点赞,评论
 
 ## 发帖
 1. 文字和图片
    1. 图片通过服务器存储
-2. @其他圈内成员
-3. 添加字数统计
+2. 选择发帖的圈子
 
-## 排行榜
-1. 发现
-    - 圈子的排行榜
-2. 我的圈子
-    - 活跃用户的排行榜
+
+# 额外功能的技术栈
+## mysql数据库
+1. 存储用户的基本信息
+2. 存储帖子的基本信息
+3. 存储兴趣圈的基本信息
+4. 存储圈子内的用户的经验信息
